# cskell

./: CMakeLists.txt  README-en.md  README.md  compile-run-test.sh  compile.sh  compile_flags.txt  run.sh  sync.sh  todo.md  try-on-main.sh  update.sh
inc/: stack.h  stack_string.h  string_class.h  token.h
src/: format.c  formattazione.c  formatter.c  main.c  main_tokenizer.c  stack.h  stack_string.c  string_class.c  string_class.h  test.c  test.h  test_main.c  test_token.c  token.c
test/: main.c  test.c  test.h  tokenizer.c
test/samples/tokenizer/0/: input.c
